# resume-parser

./: main.py  prompts.py  pyproject.toml  resume_analyser.py  utils.py
llm_adapters/: base.py  ollama_adapter.py
