[project]
name = "resume-parser"
version = "0.1.0"
description = "This helps in automation of filtering of resumes."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"

# 🔧 This is the fix — restrict Python version
requires-python = ">=3.10,<4.0"



dependencies = [
    "ollama>=0.4.8,<0.5.0",
    "PyMuPDF",          # for PDF parsing (used via `fitz`)
    "tqdm",              # optional, for progress bar
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
